--- a/htmls/barbero_cuiano.html
+++ b/htmls/barbero_cuiano.html
@@ -9,19 +9,35 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="image/x-icon" href="../multimedia/iconos/icono_barbero_cuiano.png">
     <title>CuiaN SociaL CluB * Barbero Cuiano</title>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header__Cuiano">
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="./barbero_cuiano.html">Barbero Cuiano</a></li>
-            <li><a href="./dibunker_recordz.html">DibuNkeR_RecordZ</a></li>
-            <li><a href="./diseñando_sueños.html">Diseñando sueños</a></li>
-            <li><a href="./gaia_tattoo.html">Gaia Tattoo</a></li>
-            <li><a href="./grayskull.html">GRAYSKULL</a></li>
-            <li><a href="./las_artes_de_gaia.html">Las Artes de Gaia</a></li>
-            <li><a href="./contacto.html">Contacto</a></li>
-        </ul>
+    <header class="header__club">
+        <div class="contenedor__parrafo-iconos">
+            <div class="contenedor__parrafo">
+                <p class="parrafo">Bienvenidos</p>
+            </div>
+            <div class="contenedor__iconos">
+                <a href="https://www.facebook.com/" target="_blank" class="facebook">
+                    <i class="fab fa-facebook-square fa-2x"></i>
+                </a>
+                <a href="https://www.instagram.com/" target="_blank" class="instagram"> 
+                    <i class="fab fa-brands fa-instagram fa-2x"></i>
+                </a>
+            </div>
+        </div>
+        <nav class="header__club-nav" >
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="./barbero_cuiano.html">Barbero Cuiano</a></li>
+                <li><a href="./dibunker_recordz.html">DibuNkeR_RecordZ</a></li>
+                <li><a href="./diseñando_sueños.html">Diseñando sueños</a></li>
+                <li><a href="./las_artes_de_gaia.html">Las Artes de Gaia</a></li>
+                <li><a href="./gaia_tattoo.html">Gaia Tattoo</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
+                <li class="grayskull"><a href="./grayskull.html">GRAYSKULL</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, voluptates quisquam consectetur fugiat cum
