--- a/index.html
+++ b/index.html
@@ -2,117 +2,105 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/8c875bdee9.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" type="image/x-icon" href="../multimedia/favicon.ico">
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" type="image/x-icon" href="../multimedia/favicon.ico" />
     <title>CuiaN SociaL CluB * inicio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 </head>
 
 <body>
     <header class="header__club">
-        <ul>
-            <li> <a href="./index.html">Inicio</a></li>
-            <li><a href="./htmls/barbero_cuiano.html">Barbero Cuiano</a></li>
-            <li><a href="./htmls/dibunker_recordz.html">DibuNkeR_RecordZ</a></li>
-            <li><a href="./htmls/diseñando_sueños.html">Diseñando sueños</a></li>
-            <li><a href="./htmls/gaia_tattoo.html">Gaia Tattoo</a></li>
-            <li><a href="./htmls/grayskull.html">GRAYSKULL</a></li>
-            <li><a href="./htmls/las_artes_de_gaia.html">Las Artes de Gaia</a></li>
-            <li><a href="./htmls/contacto.html">Contacto</a></li>
-        </ul>
+        <div class="contenedor__parrafo-iconos">
+            <div class="contenedor__parrafo">
+                <p class="parrafo">Bienvenidos</p>
+            </div>
+            <div class="contenedor__iconos">
+                <a href="https://www.facebook.com/" target="_blank" class="facebook">
+                    <i class="fab fa-facebook-square fa-2x"></i>
+                </a>
+                <a href="https://www.instagram.com/" target="_blank" class="instagram">
+                    <i class="fab fa-brands fa-instagram fa-2x"></i>
+                </a>
+            </div>
+        </div>
+        <nav class="header__club-nav">
+            <ul>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./htmls/barbero_cuiano.html">Barbero Cuiano</a></li>
+                <li><a href="./htmls/dibunker_recordz.html">DibuNkeR_RecordZ</a></li>
+                <li><a href="./htmls/diseñando_sueños.html">Diseñando sueños</a></li>
+                <li><a href="./htmls/gaia_tattoo.html">Gaia Tattoo</a></li>
+                <li>
+                    <a href="./htmls/las_artes_de_gaia.html">Las Artes de Gaia</a>
+                </li>
+                <li><a href="./htmls/contacto.html">Contacto</a></li>
+                <li class="grayskull">
+                    <a href="./htmls/grayskull.html">GRAYSKULL</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, voluptates quisquam consectetur fugiat cum
-            debitis est. Id molestiae consequuntur placeat, amet quas perspiciatis voluptatem harum tenetur, itaque et
-            accusamus commodi?</h1>
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam fugit optio, ducimus amet dicta consequatur
-            odit deleniti veniam illum, non, dignissimos blanditiis enim fugiat soluta incidunt excepturi in expedita.
-            Eligendi.
-            Vel voluptate nulla iusto maxime labore officiis maiores blanditiis harum odio quis? Minima necessitatibus
-            natus ea impedit accusamus sapiente cum, dicta accusantium neque ratione voluptatem sed error vitae.
-            Tempora, voluptatum!
-            Neque fugit aut, iure quia praesentium accusamus. Eveniet delectus quia excepturi vitae rerum impedit?
-            Quaerat recusandae minus cupiditate neque ipsum rerum et incidunt animi impedit voluptatum. Labore nam
-            laborum ipsam.
-            Assumenda quisquam aspernatur, temporibus tempora, tenetur mollitia amet rerum quam qui enim totam quaerat
-            modi pariatur commodi exercitationem odio dolorem quae quasi? Quos aut iure consectetur est obcaecati fugiat
-            consequatur!
-            Sit maiores tempora iste earum suscipit blanditiis a, explicabo reiciendis nulla quod animi alias, quas
-            perspiciatis, hic voluptates adipisci perferendis cumque? Eaque consequatur in earum, perspiciatis quod
-            dicta quasi magnam.
-            Dolorem tempore explicabo nulla ex architecto exercitationem sint fugiat natus voluptatibus et harum,
-            cupiditate iure nisi consequatur dolor, nam ratione sunt magni quam sapiente mollitia, dicta excepturi.
-            Quibusdam, deleniti expedita.
-            Repellat alias quae expedita ut voluptatibus fugit atque facilis odio aut deleniti architecto officiis earum
-            vitae doloribus neque rem dicta aliquam, non sapiente vero! Cupiditate at quis debitis vel blanditiis?
-            Accusamus magni aliquid illo dolores? Eveniet error aut, maiores eos deleniti sequi repellendus perferendis
-            ea minima nihil alias corrupti, qui minus repellat maxime doloremque natus et fugit cum facere deserunt!
-            Magnam ut, ducimus non consequuntur quibusdam unde, aliquid dicta dolor quis, sequi nisi id fuga consequatur
-            facilis dolores minus quo pariatur porro ullam modi? Numquam alias similique architecto voluptatem minima!
-            Doloremque ea mollitia, beatae aspernatur minima recusandae minus deleniti. Porro id voluptate dolores
-            aspernatur labore deserunt dignissimos atque suscipit expedita ad accusantium neque eius, nisi doloribus
-            tempore aut cum voluptas.
-            Omnis deserunt explicabo nulla repudiandae debitis nam nihil quibusdam, delectus autem incidunt placeat
-            quaerat culpa repellat dolorum assumenda voluptatum eligendi? Cum velit molestias accusamus reprehenderit
-            inventore nobis exercitationem consequuntur incidunt.
-            Similique eaque repellendus, totam exercitationem accusamus vel reprehenderit suscipit ducimus aliquam
-            minima est neque laboriosam officiis, fuga dolorem doloribus minus. Aspernatur delectus voluptatum commodi
-            asperiores odio? Aperiam ex esse suscipit.
-            Sed, id molestiae. Voluptatibus accusantium optio alias officia, adipisci quibusdam dolor suscipit natus ea
-            laboriosam recusandae eligendi a? Cum laborum reprehenderit unde porro recusandae ratione nulla. Velit vero
-            consequuntur explicabo.
-            Sunt temporibus saepe enim, minus in asperiores deleniti quia dolorem eos, ullam aliquid nemo perspiciatis
-            sapiente quisquam officia voluptatem illum tempore, dicta eligendi assumenda molestiae vitae. Laudantium
-            architecto ipsum cupiditate.
-            Consequatur aspernatur aliquid sint velit amet deserunt placeat suscipit libero! Provident consectetur
-            maxime sint quidem voluptates aperiam omnis voluptatem et. Ex sint cupiditate beatae, commodi dolorum
-            voluptate corrupti voluptates aliquam.
-            Itaque consectetur est deleniti nam sapiente quo, obcaecati facere aperiam expedita illum vel, voluptatibus
-            sequi cupiditate assumenda. Laborum assumenda, et quis enim dolorem quidem perspiciatis non culpa, iste
-            consectetur dicta.
-            Porro facilis ipsam beatae excepturi voluptatem libero reiciendis consequuntur perspiciatis explicabo
-            perferendis nostrum provident quidem, asperiores distinctio saepe praesentium facere id similique? Alias
-            provident aliquam harum? Voluptates ex molestias impedit.
-            Voluptas ipsum maiores provident assumenda consequatur quisquam perspiciatis illum vitae? Ea, deserunt
-            itaque, saepe animi eveniet corrupti aperiam unde officiis nobis nisi repudiandae debitis magni quia ab eius
-            eligendi dolorum.
-            Et, quae. Laboriosam mollitia voluptatibus voluptatum fuga consequuntur, alias sed! Voluptatibus magnam,
-            tempore quod necessitatibus rerum commodi unde dolor aperiam expedita, mollitia omnis blanditiis cumque
-            earum similique! Alias, commodi officiis?
-            Error repellat aliquid, repellendus ad voluptates deleniti unde sed! Tempore iste ab harum commodi ex, esse
-            exercitationem laboriosam suscipit quia. Fuga aliquid quasi quas eum reprehenderit possimus pariatur omnis
-            neque?
-            Enim ut aliquam minus repudiandae labore? Ex delectus aperiam perferendis cum incidunt, deleniti cumque,
-            expedita ipsam eligendi vel itaque porro obcaecati. Deserunt earum praesentium cumque reiciendis sint,
-            consectetur dolor omnis?
-            Sunt recusandae reprehenderit, dicta expedita sit saepe praesentium eos et atque voluptate nesciunt officia
-            quisquam necessitatibus beatae adipisci asperiores, nihil eligendi animi inventore perspiciatis aspernatur
-            esse distinctio. Voluptatibus, rerum temporibus.
-            Placeat doloribus tempora et facere rerum dolore! Cupiditate dolores atque error aperiam nulla ex! Possimus
-            officia facilis laboriosam sint minima reiciendis libero corrupti, cum modi facere exercitationem doloremque
-            iusto voluptatibus?
-            Accusantium a mollitia sit modi. Accusantium rem esse vero minima repellendus deleniti necessitatibus,
-            labore omnis consectetur earum quis officia amet excepturi veritatis molestiae maxime similique cum dolorem
-            dolore quia veniam.
-            Perferendis obcaecati eum culpa debitis similique quibusdam fuga doloremque rem sint, ea libero a inventore
-            facilis minima eligendi facere eius, fugiat tenetur magnam consequuntur. Quidem eaque voluptatem nam amet
-            velit.</p>
+        <section class="contenedor">
+            <div class="contenedor_logo">
+                <img class="logo" src="./multimedia/iconos/icono_grayskull.png" alt="logo" />
+            </div>
+            <div class="contenedor_marca">
+                <h1>Grayskull</h1>
+                <p>Barberia y peluqueria</p>
+            </div>
+        </section>
+        <section>
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./multimedia/carrusel/cabeza-cliente.jpg" class="d-block w-75 " alt="..." />
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./multimedia/carrusel/foto-cuatro.jfif" class="d-block w-75" alt="..." />
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./multimedia/carrusel/cabeza-dos.jpg" class="d-block w-75" alt="..." />
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
     </main>
     <footer>
-        <a href="https://www.facebook.com/" target="_blank" class="facebook"> <i
-                class="fab fa-facebook-square fa-3x"></i></a>
-        <a href="https://www.instagram.com/" target="_blank" class="instagram"> <i
-                class="fab fa-brands fa-instagram fa-3x"></i></a>
-        <a href="https://www.youtube.com/" target="_blank" class="youtube"> <i
-                class="fab fa-brands fa-youtube fa-3x"></i></a>
-        <a href="https://open.spotify.com/user/11125119053" target="_blank" class="spotify"> <i
-                class="fab fa-brands fa-spotify fa-3x"></i></a>
+        <a href="https://www.facebook.com/" target="_blank" class="facebook">
+            <i class="fab fa-facebook-square fa-3x"></i>
+        </a>
+        <a href="https://www.instagram.com/" target="_blank" class="instagram">
+            <i class="fab fa-brands fa-instagram fa-3x"></i>
+        </a>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
