--- a/htmls/grayskull.html
+++ b/htmls/grayskull.html
@@ -19,22 +19,20 @@
                 <p class="parrafo">Bienvenidos</p>
             </div>
             <div class="contenedor__iconos">
-                <a href="https://www.facebook.com/" target="_blank" class="facebook">
-                    <i class="fab fa-facebook-square fa-2x"></i>
-                </a>
-                <a href="https://www.instagram.com/" target="_blank" class="instagram"> 
-                    <i class="fab fa-brands fa-instagram fa-2x"></i>
-                </a>
+                <a href="https://www.facebook.com/BarberoCuiano" target="_blank" class="facebook"> <i
+                    class="fab fa-facebook-square fa-3x"></i></a>
+            <a href="https://www.instagram.com/barbero_cuiano/?hl=es-la" target="_blank" class="instagram"> <i
+                    class="fab fa-brands fa-instagram fa-3x"></i></a>
+            <a href="https://www.youtube.com/watch?v=_slzN6YzBZA&ab_channel=yuvamoreno" target="_blank" class="youtube"> <i
+                    class="fab fa-brands fa-youtube fa-3x"></i></a>
+            <a href="https://open.spotify.com/user/11125119053" target="_blank" class="spotify"> <i
+                    class="fab fa-brands fa-spotify fa-3x"></i></a>
             </div>
         </div>
         <nav class="header__club-nav" >
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./barbero_cuiano.html">Barbero Cuiano</a></li>
-                <li><a href="./dibunker_recordz.html">DibuNkeR_RecordZ</a></li>
-                <li><a href="./diseñando_sueños.html">Diseñando sueños</a></li>
-                <li><a href="./gaia_tattoo.html">Gaia Tattoo</a></li>
-                <li><a href="./las_artes_de_gaia.html">Las Artes de Gaia</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
                 <li class="grayskull"><a href="./grayskull.html">GRAYSKULL</a></li>
             </ul>
@@ -119,14 +117,7 @@
             velit.</p>
     </main>
     <footer>
-        <a href="https://www.facebook.com/BarberoCuiano" target="_blank" class="facebook"> <i
-                class="fab fa-facebook-square fa-3x"></i></a>
-        <a href="https://www.instagram.com/barbero_cuiano/?hl=es-la" target="_blank" class="instagram"> <i
-                class="fab fa-brands fa-instagram fa-3x"></i></a>
-        <a href="https://www.youtube.com/watch?v=_slzN6YzBZA&ab_channel=yuvamoreno" target="_blank" class="youtube"> <i
-                class="fab fa-brands fa-youtube fa-3x"></i></a>
-        <a href="https://open.spotify.com/user/11125119053" target="_blank" class="spotify"> <i
-                class="fab fa-brands fa-spotify fa-3x"></i></a>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5Pk6ZJ2iiczSOyCqCZ4uRy?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </footer>
 
 </body>
