--- a/index.html
+++ b/index.html
@@ -38,12 +38,6 @@
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./htmls/barbero_cuiano.html">Barbero Cuiano</a></li>
-                <li><a href="./htmls/dibunker_recordz.html">DibuNkeR_RecordZ</a></li>
-                <li><a href="./htmls/diseñando_sueños.html">Diseñando sueños</a></li>
-                <li><a href="./htmls/gaia_tattoo.html">Gaia Tattoo</a></li>
-                <li>
-                    <a href="./htmls/las_artes_de_gaia.html">Las Artes de Gaia</a>
-                </li>
                 <li><a href="./htmls/contacto.html">Contacto</a></li>
                 <li class="grayskull">
                     <a href="./htmls/grayskull.html">GRAYSKULL</a>
@@ -88,12 +82,7 @@
         </section>
     </main>
     <footer>
-        <a href="https://www.facebook.com/" target="_blank" class="facebook">
-            <i class="fab fa-facebook-square fa-3x"></i>
-        </a>
-        <a href="https://www.instagram.com/" target="_blank" class="instagram">
-            <i class="fab fa-brands fa-instagram fa-3x"></i>
-        </a>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1TsAlmAwajfxzRRYOE2hAG?utm_source=generator&theme=0" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
