--- a/htmls/grayskull.html
+++ b/htmls/grayskull.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="header__club">
+    <header class="header">
         <div class="contenedor__parrafo-iconos">
             <div class="contenedor__parrafo">
                 <p class="parrafo">Bienvenidos</p>
@@ -29,12 +29,12 @@
                     class="fab fa-brands fa-spotify fa-3x"></i></a>
             </div>
         </div>
-        <nav class="header__club-nav" >
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
+        <nav class="header__nav" >
+           <ul>
+                <li class="start"><a href="../index.html">Inicio</a></li>
                 <li><a href="./barbero_cuiano.html">Barbero Cuiano</a></li>
+                <li><a href="./grayskull.html">GRAYSKULL</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
-                <li class="grayskull"><a href="./grayskull.html">GRAYSKULL</a></li>
             </ul>
         </nav>
     </header>
