--- a/htmls/barbero_cuiano.html
+++ b/htmls/barbero_cuiano.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header__club">
+    <header class="header">
         <div class="contenedor__parrafo-iconos">
             <div class="contenedor__parrafo">
                 <p class="parrafo">Bienvenidos</p>
@@ -28,12 +28,12 @@
                     class="fab fa-brands fa-spotify fa-3x"></i></a>
             </div>
         </div>
-        <nav class="header__club-nav" >
+        <nav class="header__nav" >
             <ul>
-                <li><a href="../index.html">Inicio</a></li>
+                <li class="start"><a href="../index.html">Inicio</a></li>
                 <li><a href="./barbero_cuiano.html">Barbero Cuiano</a></li>
+                <li><a href="./grayskull.html">GRAYSKULL</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
-                <li class="grayskull"><a href="./grayskull.html">GRAYSKULL</a></li>
             </ul>
         </nav>
     </header>
