--- a/htmls/contacto.html
+++ b/htmls/contacto.html
@@ -13,26 +13,26 @@
 </head>
 
 <body>
-    <header class="header__club">
+    <header class="header">
         <div class="contenedor__parrafo-iconos">
             <div class="contenedor__parrafo">
                 <p class="parrafo">Bienvenidos</p>
             </div>
             <div class="contenedor__iconos">
                 <a href="https://www.facebook.com/" target="_blank" class="facebook">
-                    <i class="fab fa-facebook-square fa-2x"></i>
+                    <i class="fab fa-facebook-square fa-3x"></i>
                 </a>
-                <a href="https://www.instagram.com/" target="_blank" class="instagram"> 
-                    <i class="fab fa-brands fa-instagram fa-2x"></i>
+                <a href="https://www.instagram.com/" target="_blank" class="instagram">
+                    <i class="fab fa-brands fa-instagram fa-3x"></i>
                 </a>
             </div>
         </div>
-        <nav class="header__club-nav" >
+        <nav class="header__nav" >
             <ul>
-                <li><a href="../index.html">Inicio</a></li>
+                <li class="start"><a href="../index.html">Inicio</a></li>
                 <li><a href="./barbero_cuiano.html">Barbero Cuiano</a></li>
+                <li><a href="./grayskull.html">GRAYSKULL</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
-                <li class="grayskull"><a href="./grayskull.html">GRAYSKULL</a></li>
             </ul>
         </nav>
     </header>
