--- a/index.html
+++ b/index.html
@@ -1,47 +1,37 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/8c875bdee9.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="icon" type="image/x-icon" href="../multimedia/favicon.ico" />
-    <title>CuiaN SociaL CluB * inicio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="image/x-icon" href="../multimedia/iconos/icono_barbero_cuiano.png">
+    <title>CuiaN SociaL CluB * Barbero Cuiano</title>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <header class="header__club">
+    <header class="header">
         <div class="contenedor__parrafo-iconos">
             <div class="contenedor__parrafo">
                 <p class="parrafo">Bienvenidos</p>
             </div>
             <div class="contenedor__iconos">
                 <a href="https://www.facebook.com/" target="_blank" class="facebook">
-                    <i class="fab fa-facebook-square fa-2x"></i>
+                    <i class="fab fa-facebook-square fa-3x"></i>
                 </a>
                 <a href="https://www.instagram.com/" target="_blank" class="instagram">
-                    <i class="fab fa-brands fa-instagram fa-2x"></i>
+                    <i class="fab fa-brands fa-instagram fa-3x"></i>
                 </a>
             </div>
         </div>
-        <nav class="header__club-nav">
+        <nav class="header__nav" >
             <ul>
-                <li><a href="./index.html">Inicio</a></li>
+                <li class="start"><a href="./index.html">Inicio</a></li>
                 <li><a href="./htmls/barbero_cuiano.html">Barbero Cuiano</a></li>
+                <li><a href="./htmls/grayskull.html">GRAYSKULL</a></li>
                 <li><a href="./htmls/contacto.html">Contacto</a></li>
-                <li class="grayskull">
-                    <a href="./htmls/grayskull.html">GRAYSKULL</a>
-                </li>
             </ul>
         </nav>
     </header>
