--- a/index.html
+++ b/index.html
@@ -36,41 +36,19 @@
         </nav>
     </header>
     <main>
-        <section class="contenedor">
-            <div class="contenedor_logo">
-                <img class="logo" src="./multimedia/iconos/icono_grayskull.png" alt="logo" />
-            </div>
-            <div class="contenedor_marca">
-                <h1>Grayskull</h1>
-                <p>Barberia y peluqueria</p>
-            </div>
-        </section>
-        <section>
-            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./multimedia/carrusel/cabeza-cliente.jpg" class="d-block w-75 " alt="..." />
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./multimedia/carrusel/foto-cuatro.jfif" class="d-block w-75" alt="..." />
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./multimedia/carrusel/cabeza-dos.jpg" class="d-block w-75" alt="..." />
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </section>
-    </main>
+        <pre>CUIAN SOCIAL CLUB, es un colectivo de artistas que se unieron para fusionar:
+☑️cortes de cabello
+☑️barbas
+☑️cosmética capilar
+☑️música en formato analógico
+☑️fotografía
+☑️cine
+☑️pintura
+☑️tattoo
+☑️indumentaria
+☑️artesanías
+☑️comidas
+Un espacio ideal para desconectar!</pre>
     <footer>
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1TsAlmAwajfxzRRYOE2hAG?utm_source=generator&theme=0" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </footer>
