--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         </nav>
     </header>
     <main>
-        <pre>CUIAN SOCIAL CLUB, es un colectivo de artistas que se unieron para fusionar:
+       <h1> CUIAN SOCIAL CLUB</h1>
+        <pre>
+            Somos un colectivo de artistas que se unieron para fusionar:
 ☑️cortes de cabello
 ☑️barbas
 ☑️cosmética capilar
