--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,6 +11,7 @@
     <title>CuiaN SociaL CluB * Barbero Cuiano</title>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="header">
         <div class="contenedor__parrafo-iconos">
@@ -26,7 +27,7 @@
                 </a>
             </div>
         </div>
-        <nav class="header__nav" >
+        <nav class="header__nav">
             <ul>
                 <li class="start"><a href="./index.html">Inicio</a></li>
                 <li><a href="./htmls/barbero_cuiano.html">Barbero Cuiano</a></li>
@@ -36,9 +37,17 @@
         </nav>
     </header>
     <main>
-       <h1> CUIAN SOCIAL CLUB</h1>
+        <section class="contenedor">
+            <div class="contenedor_logo">
+                <img class="logo" src="./multimedia/background/background_Cuiano_social_club.jpg" alt="logo" />
+            </div>
+            <div class="contenedor_marca">
+                <h1>CUIAN SOCIAL CLUB</h1>
+            </div>
+        </section>
+
         <pre>
-            Somos un colectivo de artistas que se unieron para fusionar:
+           <p> Somos un colectivo de artistas que se unieron para fusionar:
 ☑️cortes de cabello
 ☑️barbas
 ☑️cosmética capilar
@@ -50,16 +59,19 @@
 ☑️indumentaria
 ☑️artesanías
 ☑️comidas
-Un espacio ideal para desconectar!</pre>
-    <footer>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1TsAlmAwajfxzRRYOE2hAG?utm_source=generator&theme=0" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
+Un espacio ideal para desconectar!</p></pre>
+        <footer>
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/playlist/1TsAlmAwajfxzRRYOE2hAG?utm_source=generator&theme=0"
+                width="100%" height="80" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+            integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
