--- a/htmls/grayskull.html
+++ b/htmls/grayskull.html
@@ -39,82 +39,29 @@
         </nav>
     </header>
     <main>
-        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, voluptates quisquam consectetur fugiat cum
-            debitis est. Id molestiae consequuntur placeat, amet quas perspiciatis voluptatem harum tenetur, itaque et
-            accusamus commodi?</h1>
+        <section class="contenedor">
+            <div class="contenedor_logo">
+                <img class="logo" src="../multimedia/background/background_Grayskull.jpg" alt="logo" />
+            </div>
+            <div class="contenedor_marca">
+                <h1>Grayskull</h1>
+            </div>
+        </section>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam fugit optio, ducimus amet dicta consequatur
-            odit deleniti veniam illum, non, dignissimos blanditiis enim fugiat soluta incidunt excepturi in expedita.
-            Eligendi.
-            Vel voluptate nulla iusto maxime labore officiis maiores blanditiis harum odio quis? Minima necessitatibus
-            natus ea impedit accusamus sapiente cum, dicta accusantium neque ratione voluptatem sed error vitae.
-            Tempora, voluptatum!
-            Neque fugit aut, iure quia praesentium accusamus. Eveniet delectus quia excepturi vitae rerum impedit?
-            Quaerat recusandae minus cupiditate neque ipsum rerum et incidunt animi impedit voluptatum. Labore nam
-            laborum ipsam.
-            Assumenda quisquam aspernatur, temporibus tempora, tenetur mollitia amet rerum quam qui enim totam quaerat
-            modi pariatur commodi exercitationem odio dolorem quae quasi? Quos aut iure consectetur est obcaecati fugiat
-            consequatur!
-            Sit maiores tempora iste earum suscipit blanditiis a, explicabo reiciendis nulla quod animi alias, quas
-            perspiciatis, hic voluptates adipisci perferendis cumque? Eaque consequatur in earum, perspiciatis quod
-            dicta quasi magnam.
-            Dolorem tempore explicabo nulla ex architecto exercitationem sint fugiat natus voluptatibus et harum,
-            cupiditate iure nisi consequatur dolor, nam ratione sunt magni quam sapiente mollitia, dicta excepturi.
-            Quibusdam, deleniti expedita.
-            Repellat alias quae expedita ut voluptatibus fugit atque facilis odio aut deleniti architecto officiis earum
-            vitae doloribus neque rem dicta aliquam, non sapiente vero! Cupiditate at quis debitis vel blanditiis?
-            Accusamus magni aliquid illo dolores? Eveniet error aut, maiores eos deleniti sequi repellendus perferendis
-            ea minima nihil alias corrupti, qui minus repellat maxime doloremque natus et fugit cum facere deserunt!
-            Magnam ut, ducimus non consequuntur quibusdam unde, aliquid dicta dolor quis, sequi nisi id fuga consequatur
-            facilis dolores minus quo pariatur porro ullam modi? Numquam alias similique architecto voluptatem minima!
-            Doloremque ea mollitia, beatae aspernatur minima recusandae minus deleniti. Porro id voluptate dolores
-            aspernatur labore deserunt dignissimos atque suscipit expedita ad accusantium neque eius, nisi doloribus
-            tempore aut cum voluptas.
-            Omnis deserunt explicabo nulla repudiandae debitis nam nihil quibusdam, delectus autem incidunt placeat
-            quaerat culpa repellat dolorum assumenda voluptatum eligendi? Cum velit molestias accusamus reprehenderit
-            inventore nobis exercitationem consequuntur incidunt.
-            Similique eaque repellendus, totam exercitationem accusamus vel reprehenderit suscipit ducimus aliquam
-            minima est neque laboriosam officiis, fuga dolorem doloribus minus. Aspernatur delectus voluptatum commodi
-            asperiores odio? Aperiam ex esse suscipit.
-            Sed, id molestiae. Voluptatibus accusantium optio alias officia, adipisci quibusdam dolor suscipit natus ea
-            laboriosam recusandae eligendi a? Cum laborum reprehenderit unde porro recusandae ratione nulla. Velit vero
-            consequuntur explicabo.
-            Sunt temporibus saepe enim, minus in asperiores deleniti quia dolorem eos, ullam aliquid nemo perspiciatis
-            sapiente quisquam officia voluptatem illum tempore, dicta eligendi assumenda molestiae vitae. Laudantium
-            architecto ipsum cupiditate.
-            Consequatur aspernatur aliquid sint velit amet deserunt placeat suscipit libero! Provident consectetur
-            maxime sint quidem voluptates aperiam omnis voluptatem et. Ex sint cupiditate beatae, commodi dolorum
-            voluptate corrupti voluptates aliquam.
-            Itaque consectetur est deleniti nam sapiente quo, obcaecati facere aperiam expedita illum vel, voluptatibus
-            sequi cupiditate assumenda. Laborum assumenda, et quis enim dolorem quidem perspiciatis non culpa, iste
-            consectetur dicta.
-            Porro facilis ipsam beatae excepturi voluptatem libero reiciendis consequuntur perspiciatis explicabo
-            perferendis nostrum provident quidem, asperiores distinctio saepe praesentium facere id similique? Alias
-            provident aliquam harum? Voluptates ex molestias impedit.
-            Voluptas ipsum maiores provident assumenda consequatur quisquam perspiciatis illum vitae? Ea, deserunt
-            itaque, saepe animi eveniet corrupti aperiam unde officiis nobis nisi repudiandae debitis magni quia ab eius
-            eligendi dolorum.
-            Et, quae. Laboriosam mollitia voluptatibus voluptatum fuga consequuntur, alias sed! Voluptatibus magnam,
-            tempore quod necessitatibus rerum commodi unde dolor aperiam expedita, mollitia omnis blanditiis cumque
-            earum similique! Alias, commodi officiis?
-            Error repellat aliquid, repellendus ad voluptates deleniti unde sed! Tempore iste ab harum commodi ex, esse
-            exercitationem laboriosam suscipit quia. Fuga aliquid quasi quas eum reprehenderit possimus pariatur omnis
-            neque?
-            Enim ut aliquam minus repudiandae labore? Ex delectus aperiam perferendis cum incidunt, deleniti cumque,
-            expedita ipsam eligendi vel itaque porro obcaecati. Deserunt earum praesentium cumque reiciendis sint,
-            consectetur dolor omnis?
-            Sunt recusandae reprehenderit, dicta expedita sit saepe praesentium eos et atque voluptate nesciunt officia
-            quisquam necessitatibus beatae adipisci asperiores, nihil eligendi animi inventore perspiciatis aspernatur
-            esse distinctio. Voluptatibus, rerum temporibus.
-            Placeat doloribus tempora et facere rerum dolore! Cupiditate dolores atque error aperiam nulla ex! Possimus
-            officia facilis laboriosam sint minima reiciendis libero corrupti, cum modi facere exercitationem doloremque
-            iusto voluptatibus?
-            Accusantium a mollitia sit modi. Accusantium rem esse vero minima repellendus deleniti necessitatibus,
-            labore omnis consectetur earum quis officia amet excepturi veritatis molestiae maxime similique cum dolorem
-            dolore quia veniam.
-            Perferendis obcaecati eum culpa debitis similique quibusdam fuga doloremque rem sint, ea libero a inventore
-            facilis minima eligendi facere eius, fugiat tenetur magnam consequuntur. Quidem eaque voluptatem nam amet
-            velit.</p>
+        <pre>
+           <p> Somos un colectivo de artistas que se unieron para fusionar:
+☑️cortes de cabello
+☑️barbas
+☑️cosmética capilar
+☑️música en formato analógico
+☑️fotografía
+☑️cine
+☑️pintura
+☑️tattoo
+☑️indumentaria
+☑️artesanías
+☑️comidas
+Un espacio ideal para desconectar!</p></pre>
     </main>
     <footer>
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5Pk6ZJ2iiczSOyCqCZ4uRy?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
