--- a/htmls/contacto.html
+++ b/htmls/contacto.html
@@ -20,14 +20,6 @@
             <div class="contenedor__parrafo">
                 <p class="parrafo">Bienvenidos</p>
             </div>
-            <div class="contenedor__iconos">
-                <a href="https://www.facebook.com/" target="_blank" class="facebook">
-                    <i class="fab fa-facebook-square fa-3x"></i>
-                </a>
-                <a href="https://www.instagram.com/" target="_blank" class="instagram">
-                    <i class="fab fa-brands fa-instagram fa-3x"></i>
-                </a>
-            </div>
         </div>
         <nav class="header__nav" >
             <ul>
@@ -42,7 +34,7 @@
         
 
         <section class="container">
-          <h1>contacto</h1>
+          <h1>Contacto</h1>
           <p> Mijo, que esperas para contactar a los magios</p>
     
           <form class="row g-3">
@@ -81,7 +73,8 @@
           <p>Si no, puedes llamar a +54 9 2644 16-9186 o enviar un <a href="https://wa.me/5492644169186" target="_blank"> whatsapp</a></p>
         </article>
     </main>
-    <footer>
+    <footer class="footer__contacto">
+        <ul></ul>
         <a href="https://www.facebook.com/" target="_blank" class="facebook"> <i
                 class="fab fa-facebook-square fa-3x"></i></a>
         <a href="https://www.instagram.com/" target="_blank" class="instagram"> <i
