--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/8c875bdee9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="image/x-icon" href="../multimedia/iconos/icono_barbero_cuiano.png">
-    <title>CuiaN SociaL CluB * Barbero Cuiano</title>
+    <title>CuiaN SociaL CluB * CUIAN SOCIAL CLUB</title>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
 </head>
 
