--- a/index2.html
+++ b/index2.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/8c875bdee9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" type="image/x-icon" href="../multimedia/favicon.ico">
-    <title>CuiaN SociaL CluB * Contacto</title>
+    <link rel="icon" type="image/x-icon" href="../multimedia/iconos/icono_barbero_cuiano.png">
+    <title>CuiaN SociaL CluB * CUIAN SOCIAL CLUB</title>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
 </head>
 
@@ -18,13 +18,21 @@
             <div class="contenedor__parrafo">
                 <p class="parrafo">Bienvenidos</p>
             </div>
+            <div class="contenedor__iconos">
+                <a href="https://www.facebook.com/" target="_blank" class="facebook">
+                    <i class="fab fa-facebook-square fa-3x"></i>
+                </a>
+                <a href="https://www.instagram.com/" target="_blank" class="instagram">
+                    <i class="fab fa-brands fa-instagram fa-3x"></i>
+                </a>
+            </div>
         </div>
         <nav class="header__nav">
             <ul>
                 <li class="start"><a href="./index.html">Inicio</a></li>
                 <li><a href="./htmls/barbero_cuiano.html">Barbero Cuiano</a></li>
-                <li><a href="./grayskull.html">GRAYSKULL</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
+                <li><a href="./htmls/grayskull.html">GRAYSKULL</a></li>
+                <li><a href="./htmls/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
