--- a/htmls/barbero_cuiano.html
+++ b/htmls/barbero_cuiano.html
@@ -30,7 +30,7 @@
         </div>
         <nav class="header__nav" >
             <ul>
-                <li class="start"><a href="../index2.html">Inicio</a></li>
+                <li class="start"><a href="../index.html">Inicio</a></li>
                 <li><a href="./barbero_cuiano.html">Barbero Cuiano</a></li>
                 <li><a href="./grayskull.html">GRAYSKULL</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
@@ -40,10 +40,10 @@
     <main>
         <section class="contenedor">
             <div class="contenedor_logo">
-                <img class="logo" src="../multimedia/iconos/icono_grayskull.png" alt="logo" />
+                <img class="logo" src="../multimedia/iconos/icono_barbero_cuiano.png" alt="logo" />
             </div>
             <div class="contenedor_marca">
-                <h1>Grayskull</h1>
+                <h1>Barbero Cuiano</h1>
                 <p>Barberia y peluqueria</p>
             </div>
         </section>
