--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav class="header__nav" >
             <ul>
                 <li class="start"><a href="./index.html">Inicio</a></li>
-                <li><a href=".//htmls/barbero_cuiano.html">Barbero Cuiano</a></li>
+                <li><a href="./htmls/barbero_cuiano.html">Barbero Cuiano</a></li>
                 <li><a href="./htmls/grayskull.html">GRAYSKULL</a></li>
                 <li><a href="./htmls/contacto.html">Contacto</a></li>
             </ul>
