--- a/htmls/barbero_cuiano.html
+++ b/htmls/barbero_cuiano.html
@@ -30,8 +30,8 @@
         </div>
         <nav class="header__nav" >
             <ul>
-                <li class="start"><a href="../index.html">Inicio</a></li>
-                <li><a href="./barbero_cuiano.html">Barbero Cuiano</a></li>
+                <li ><a href="../index.html">Inicio</a></li>
+                <li class="start"><a href="./barbero_cuiano.html">Barbero Cuiano</a></li>
                 <li><a href="./grayskull.html">GRAYSKULL</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
