--- a/htmls/contacto.html
+++ b/htmls/contacto.html
@@ -23,10 +23,10 @@
         </div>
         <nav class="header__nav" >
             <ul>
-                <li class="start"><a href="../index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./barbero_cuiano.html">Barbero Cuiano</a></li>
                 <li><a href="./grayskull.html">GRAYSKULL</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
+                <li class="start"><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
