--- a/htmls/grayskull.html
+++ b/htmls/grayskull.html
@@ -31,9 +31,9 @@
         </div>
         <nav class="header__nav" >
            <ul>
-                <li class="start"><a href="../index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./barbero_cuiano.html">Barbero Cuiano</a></li>
-                <li><a href="./grayskull.html">GRAYSKULL</a></li>
+                <li class="start"><a href="./grayskull.html">GRAYSKULL</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
