--- a/htmls/barbero_cuiano.html
+++ b/htmls/barbero_cuiano.html
@@ -38,40 +38,21 @@
         </nav>
     </header>
     <main>
-        <section class="contenedor">
-            <div class="contenedor_logo">
-                <img class="logo" src="../multimedia/iconos/icono_barbero_cuiano.png" alt="logo" />
-            </div>
-            <div class="contenedor_marca">
-                <h1>Barbero Cuiano</h1>
-                <p>Barberia y peluqueria</p>
-            </div>
-        </section>
-        <section>
-            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../multimedia/carrusel/cabeza-cliente.jpg" class="d-block w-75 " alt="..." />
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../multimedia/carrusel/foto-cuatro.jfif" class="d-block w-75" alt="..." />
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../multimedia/carrusel/cabeza-dos.jpg" class="d-block w-75" alt="..." />
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </section>
+
+        <div class="container__carrosel">
+        <ul class="slider">
+            <li id="slidel_1" > <img src="../multimedia/carrusel/corte_cliente_1.jpg" alt=""></li>
+            <li id="slidel_2" > <img src="../multimedia/carrusel/corte_cliente_2.jpg" alt=""></li>
+            <li id="slidel_3" > <img src="../multimedia/carrusel/corte_cliente_3.jfif" alt=""></li>
+        </ul>
+        <ul class="menu">
+            <li> <a href="#slidel_1">1</a></li>
+            <li> <a href="#slidel_2">2</a></li>          
+            <li> <a href="#slidel_3">3</a></li>
+        </ul>
+
+        </div>
+        
     
     </main>
     <footer>
